--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		var mydate = new Date();
 		document.writeln("Copyright&nbsp;&copy;&nbsp;2020 - "+mydate.getFullYear()+'&nbsp;Beta');</script></p> 
 	<p class="copyright">每当我迷惑的时候，你都给我一种温暖，就像某个人的手臂，紧紧搂着我的肩膀</p> 
+	  
     </footer>
 <span id="span"></span>
 <script type="text/javascript">
@@ -62,6 +63,7 @@
     }
     setInterval(runtime, 1000);
 </script>
+	  <a href="https://icp.gov.moe/?keyword=20236002" target="_blank">萌ICP备20236002号</a>
     <!-- MySSL安全认证 -->
 <div style="width: 100px; height: 100px; position: fixed;right: 0; bottom: 0; z-index: 99999999;">
     <a>
