--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     }
     setInterval(runtime, 1000);
 </script>
-	  <a class="github-badge" target="_blank" href="https://icp.gov.moe/?keyword=20236002"" style="margin-inline:5px" title="本站已加入萌ICP豪华套餐，萌ICP备20236002"号"><
+	  <a href="https://icp.gov.moe/?keyword=20236002" target="_blank">萌ICP备20236002号</a>
     <!-- MySSL安全认证 -->
 <div style="width: 100px; height: 100px; position: fixed;right: 0; bottom: 0; z-index: 99999999;">
     <a>
