--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li> <a target="_blank" href="https://blog.hongan.fun/">红岸博客</a></li> 
       <li> <a target="_blank" href="https://game.hongan.fun/">项目主页</a></li> 
       <li> <a target="_blank" href="https://c1.hongan.fun/#/login">红岸临时云盘</a></li> 
-
+      <li> <a target="_blank" href="https://game.hongan.fun/JavaScript/">JavaScript实例</a></li> 
      </ul> 
     </nav> 
    </header> 
